@@ -1,4 +1,6 @@
-package com.heima.utils.common;
+package jmu.lsk.utils.common;
+
+import org.apache.commons.codec.binary.Base64;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -39,7 +41,8 @@ public class ZipUtils {
                 }
             }
         }
-        return new sun.misc.BASE64Encoder().encode(out.toByteArray());
+//        return new sun.misc.BASE64Encoder().encode(out.toByteArray());
+          return Base64.encodeBase64String(out.toByteArray());
     }
 
 
@@ -63,7 +66,8 @@ public class ZipUtils {
         byte[] compressed = null;
         String decompressed = null;
         try {
-            compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+//            compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            compressed = Base64.decodeBase64(compressedStr);
             in = new ByteArrayInputStream(compressed);
             ginzip = new GZIPInputStream(in);
 
@@ -122,7 +126,8 @@ public class ZipUtils {
             zout.write(str.getBytes());
             zout.closeEntry();
             compressed = out.toByteArray();
-            compressedStr = new sun.misc.BASE64Encoder().encodeBuffer(compressed);
+//            compressedStr = new sun.misc.BASE64Encoder().encodeBuffer(compressed);
+            compressedStr = Base64.encodeBase64String(compressed);
         } catch (IOException e) {
             compressed = null;
         } finally {
@@ -160,7 +165,8 @@ public class ZipUtils {
         ZipInputStream zin = null;
         String decompressed = null;
         try {
-            byte[] compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+//            byte[] compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            byte[] compressed = Base64.decodeBase64(compressedStr);
             out = new ByteArrayOutputStream();
             in = new ByteArrayInputStream(compressed);
             zin = new ZipInputStream(in);
